--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 djangorestframework = "*"
 djangorestframework-jwt = "*"
 django-cors-headers = "*"
+django-rest-passwordreset = "*"
 
 [requires]
 python_version = "3.8"
