--- a/llalfrontend/package.json
+++ b/llalfrontend/package.json
@@ -8,13 +8,20 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "google-maps-react": "^2.0.6",
+    "lodash": "^4.17.20",
+    "medium-editor": "^5.23.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
+    "react-google-places-autocomplete": "^3.0.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.3.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
