--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,11 @@ djangorestframework-jwt = "*"
 django-cors-headers = "*"
 django-rest-passwordreset = "*"
 python-dotenv = "*"
+django-rest-framework-social-oauth2 = "*"
+django-rest-auth = "*"
+django-allauth = "*"
+psycopg2-binary = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.8"
